<resources>
    <string name="app_name">Kersh Helper</string>
    <string name="splash_screen_txt">\nKersh\nHelper</string>
    <string name="welcomemsg">Welcome To\nKersh Helper</string>
    <string name="slang">Your Belly Our Goal</string>
    <string name="already_have_acctxt">Already Have an Account?</string>
    <string name="create_acc">Create an Account</string>
    <string name="guest_login"><u>Continue as Guest</u></string>
    <string name="logintxt"><u>Login</u></string>
    <string name="namehint">Enter a Name to Display on the App</string>
    <string name="email_hint">Enter your Email</string>
    <string name="passwordhint">Enter Your Password</string>
    <string name="confirm_pass_hint">Confirm Your Password</string>
    <string name="usernametxt">Display Name</string>
    <string name="emailtxt">Email</string>
    <string name="passtxt">Password</string>
    <string name="confirm_passtxt">Confirm Password</string>
    <string name="signuptxt"><u>Sign Up</u></string>
    <string name="signup_btn">Sign Up</string>
    <string name="have_account">Don\'t Have Account?</string>
    <string name="login_btn">Login</string>
    <string name="tools_saved_number">00</string>
    <string name="card_food_title">Blini Pancakes</string>
    <string name="ingredients_number">7 Ingredients</string>
    <string name="add_to_calendar">Add To Calendar</string>
    <string name="daily_meals">Daily Inspiration</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="meals">Meals</string>
    <string name="calendar">Calendar</string>
    <string name="cart">Cart</string>
    <string name="version">version 0.1.1</string>
    <string name="edit_your_profile"><u>Edit Your Profile</u></string>
    <string name="log_out">Log Out</string>
    <string name="about_us">About Us</string>
    <string name="lorem_ipsum_2p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam elementum mollis dui in pellentesque.
        Curabitur nec ligula ut quam pulvinar efficitur non quis ipsum. Nullam ante dolor, interdum sit amet ultrices et, interdum nec dolor.
        Nulla fringilla velit a lectus faucibus, vitae facilisis neque tempus. Vestibulum scelerisque iaculis leo at tristique. Aliquam faucibus vel nisl eu pellentesque.
        Ut efficitur augue lacus, imperdiet gravida mi viverra at. Nullam in vestibulum mauris. Etiam porta est ut ligula aliquet, in interdum nisl mollis.
        \n\nUt ac massa et diam ultricies sollicitudin eget eu arcu. Fusce tincidunt metus augue, eget imperdiet enim hendrerit finibus. Integer ac nisi id ex tincidunt blandit
        . Duis pulvinar turpis nec mi condimentum dictum. Proin mauris ex, varius id nibh consequat, interdum elementum libero.
        Vivamus ultrices libero quam, nec auctor lacus fringilla id. Praesent at egestas nulla. Sed a lectus purus. Ut a mauris ut lectus rhoncus lacinia.
        Praesent facilisis semper convallis. Duis scelerisque dapibus turpis. Nullam risus nibh, pulvinar et eros at, mattis eleifend eros.
        Aliquam aliquet consequat purus, at facilisis dolor. Cras ornare pretium pulvinar. Etiam vel metus molestie, feugiat neque eget,placerat mauris.</string>
    <string name="old_passwordtxt">Old Password</string>
    <string name="confirm">Confirm</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="categorytools">Category: Side</string>
    <string name="lets_go_shopping">Lets go Shopping</string>
    <string name="how_to_make_it">How to Make it?</string>
    <string name="save_to_bookmarks">Save to Bookmarks</string>
    <string name="search_by_ingredients">Search By Ingredients</string>
    <string name="see_more"><u>See More</u></string>
    <string name="search_by_category">Search By Category</string>
    <string name="search_for_meals">Search For Meals</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="cancel">Cancel</string>
    <string name="access_denied">Access Denied</string>
    <string name="guest_dialog_msg">Enjoy the full experience! Log in to unlock this feature.</string>
    <string name="ingredients">%d Ingredients</string>
</resources>