<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_page_background"
    tools:context=".features.welcomescreenfragments.SignUpFragment">


<androidx.constraintlayout.widget.Group
        android:id="@+id/group2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/group_background"
        app:constraint_referenced_ids="signup_login_btn,textView11,signupbtn,sign_up_name,textView10,sign_up_confirmpass,sign_up_email,sign_up_password,textView7,textView9,textView8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView8" />

    <TextView
        android:id="@+id/signup_login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/roboto"
        android:text="@string/logintxt"
        android:textColor="@color/secondary_color"
        android:textSize="14dp"
        app:layout_constraintStart_toEndOf="@+id/textView11"
        app:layout_constraintTop_toTopOf="@+id/textView11" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="10dp"
        android:text="@string/already_have_acctxt"
        android:textColor="@color/black"
        android:textSize="14dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupbtn" />

    <Button
        android:id="@+id/signupbtn"
        android:layout_width="152dp"
        android:layout_height="44dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/secondary_color"
        android:fontFamily="@font/roboto"
        android:text="@string/signup_btn"
        android:textColor="@color/surface"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_confirmpass" />

    <EditText
        android:id="@+id/sign_up_name"
        android:layout_width="279dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_background"
        android:ems="10"
        android:hint="@string/namehint"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="@color/secondary_color"
        android:textColorHint="@color/secondary_color"
        android:textSize="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto"
        android:text="@string/confirm_passtxt"
        android:textColor="@color/primary_color"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_password" />

    <EditText
        android:id="@+id/sign_up_confirmpass"
        android:layout_width="279dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_background"
        android:ems="10"
        android:hint="@string/confirm_pass_hint"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@color/secondary_color"
        android:textColorHint="@color/secondary_color"
        android:textSize="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <EditText
        android:id="@+id/sign_up_email"
        android:layout_width="279dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_background"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColor="@color/secondary_color"
        android:textColorHint="@color/secondary_color"
        android:textSize="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <EditText
        android:id="@+id/sign_up_password"
        android:layout_width="279dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_background"
        android:ems="10"
        android:hint="@string/passwordhint"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@color/secondary_color"
        android:textColorHint="@color/secondary_color"
        android:textSize="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto"
        android:text="@string/emailtxt"
        android:textColor="@color/primary_color"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_name" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto"
        android:text="@string/passtxt"
        android:textColor="@color/primary_color"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_email" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="550dp"
        android:fontFamily="@font/roboto"
        android:paddingTop="10dp"
        android:text="@string/usernametxt"
        android:textColor="@color/primary_color"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>