<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_page_background">

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/group_background"
        app:constraint_referenced_ids="signup_login_btn,textView11,signupbtn,sign_up_name,textView10,sign_up_confirmpass,sign_up_email,sign_up_password,textView7,textView9,textView8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/signup_login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/logintxt"
        android:textColor="@color/secondary_color"
        android:textSize="14dp"
        app:layout_constraintTop_toTopOf="@+id/textView11"
        tools:layout_editor_absoluteX="267dp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/alreadyhaveacctxt"
        android:textColor="@color/black"
        android:textSize="14dp"
        app:layout_constraintBottom_toBottomOf="@+id/group2"
        tools:layout_editor_absoluteX="88dp" />

    <Button
        android:id="@+id/signupbtn"
        android:layout_width="152dp"
        android:layout_height="44dp"
        android:layout_marginBottom="13dp"
        android:backgroundTint="@color/secondary_color"
        android:fontFamily="@font/roboto"
        android:text="@string/signuptxt"
        android:textColor="@color/surface"
        app:layout_constraintBottom_toTopOf="@+id/textView11"
        app:layout_constraintEnd_toStartOf="@+id/group2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/group2" />

    <EditText
        android:id="@+id/sign_up_name"
        android:layout_width="279dp"
        android:layout_height="55dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/edittext_background"
        android:ems="10"
        android:hint="@string/namehint"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="@color/secondary_color"
        android:textSize="14dp"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintEnd_toStartOf="@+id/group2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/group2" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="9dp"
        android:fontFamily="@font/roboto"
        android:text="@string/confirm_passtxt"
        android:textColor="@color/primary_color"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/sign_up_confirmpass"
        app:layout_constraintEnd_toStartOf="@+id/group2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/group2" />

    <EditText
        android:id="@+id/sign_up_confirmpass"
        android:layout_width="279dp"
        android:layout_height="55dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edittext_background"
        android:ems="10"
        android:hint="@string/confirm_pass_hint"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="@color/secondary_color"
        android:textSize="14dp"
        app:layout_constraintBottom_toTopOf="@+id/signupbtn"
        app:layout_constraintEnd_toStartOf="@+id/group2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/group2" />

    <EditText
        android:id="@+id/sign_up_email"
        android:layout_width="279dp"
        android:layout_height="55dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/edittext_background"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="@color/secondary_color"
        android:textSize="14dp"
        app:layout_constraintBottom_toTopOf="@+id/textView9"
        app:layout_constraintEnd_toStartOf="@+id/group2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/group2" />

    <EditText
        android:id="@+id/sign_up_password"
        android:layout_width="279dp"
        android:layout_height="55dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/edittext_background"
        android:ems="10"
        android:hint="@string/passwordhint"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="@color/secondary_color"
        android:textSize="14dp"
        app:layout_constraintBottom_toTopOf="@+id/textView10"
        app:layout_constraintEnd_toStartOf="@+id/group2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/group2" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/roboto"
        android:text="@string/emailtxt"
        android:textColor="@color/primary_color"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/sign_up_email"
        app:layout_constraintEnd_toStartOf="@+id/group2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/group2" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:fontFamily="@font/roboto"
        android:text="@string/passtxt"
        android:textColor="@color/primary_color"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/sign_up_password"
        app:layout_constraintEnd_toStartOf="@+id/group2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/group2" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/roboto"
        android:text="@string/usernametxt"
        android:textColor="@color/primary_color"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/sign_up_name"
        app:layout_constraintEnd_toStartOf="@+id/group2"
        app:layout_constraintStart_toEndOf="@+id/group2" />

</androidx.constraintlayout.widget.ConstraintLayout>