<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:background="@color/surface_varient_0op"
    android:paddingBottom="20dp">

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto"
        android:text="@string/access_denied"
        android:textColor="@color/red_button_color"
        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/guest_dialog_msg"
        android:textColor="@color/secondary_color"

        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView14"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <Button
        android:id="@+id/guestDialogCancelBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@color/btn_secondary_color"
        android:text="@string/cancel"
        android:textColor="@color/surface"
        android:textColorHint="@color/surface"
        android:textColorLink="@color/surface"
        app:layout_constraintEnd_toStartOf="@+id/guestDialogLoginBtn"
        app:layout_constraintTop_toTopOf="@+id/guestDialogLoginBtn" />

    <Button
        android:id="@+id/guestDialogLoginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/primary_color"
        android:text="@string/login_btn"
        android:textColor="@color/surface"
        android:textColorHint="@color/surface"
        android:textColorLink="@color/surface"
        app:layout_constraintEnd_toEndOf="@+id/textView15"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />
</androidx.constraintlayout.widget.ConstraintLayout>